hphp/hack/test/typecheck/tconst/unsupported_this3.php.exp
File "unsupported_this3.php", line 6, characters 10-13:
The type "this" can only be used as a return type, to instantiate a covariant type variable, or as a private non-static member variable (Naming[2043])
