hphp/hack/test/typecheck/tconst/unsupported_this3.php
<?hh // strict

class C {
  const type X = int;

  public this::X $x;
}
